--- a/posts/static/css/master.css
+++ b/posts/static/css/master.css
@@ -56,7 +56,7 @@ html, body{
   border-bottom: 1px solid #bfbfbf;
 }
 
-/*############################### Post_Detail_Page ###################################*/
+/*############################### Post_List_Page ###################################*/
 
 .search-items{
   width: 80%;
@@ -100,3 +100,92 @@ html, body{
 
 #post-list-title:link{color: #565656; text-decoration: none;}
 #post-list-title:hover{color: #565656;}
+
+/*#################### Post Detail Page ######################*/
+
+.project{
+  display: inline-block;
+  width: 60%;
+  background-color: white;
+  margin-top: 5%;
+  padding: 25px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px;
+}
+
+#about_href:link{color: black;}
+#about_href:hover{color: gray;}
+#about_href:visited{color: black;}
+
+
+
+.about{
+  display: inline-block;
+  position:absolute;
+  width: 30%;
+  margin-left: 3%;
+  margin-top: 4.5%;
+  background-color: white;
+  padding: 25px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px;
+}
+
+/*##################### Login Page ############################*/
+
+.login_page{
+  height: 35%;
+  width: 35%;
+  margin-left: 32%;
+  margin-top: 12%;
+  padding: 20px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px;
+}
+
+/*################ Sign Up Page ################# */
+
+.signup_page{
+  width: 40%;
+  margin-left: 30%;
+  margin-top: 15px;
+  margin-bottom: 20px;
+}
+
+/* ################# Church Detail ################ */
+
+.church_detail{
+  background-color: white;
+  margin-left: 15%;
+  margin-top: 4%;
+  padding: 30px;
+  width: 70%;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px;
+}
+
+/*################# Contact Form ################### */
+
+.contact_form{
+  display: inline-block;
+  background-color: white;
+  margin-top: 5%;
+  width: 60%;
+  padding: 40px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px;
+}
+
+.contact_info{
+  display: inline-block;
+  position: absolute;
+  background-color: white;
+  margin-top: 4.25%;
+  margin-left: 6%;
+  width: 30%;
+  padding: 40px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px;
+}
