--- a/posts/templates/posts/post_detail.html
+++ b/posts/templates/posts/post_detail.html
@@ -2,12 +2,24 @@
 
 {% block content %}
 
-  <h1>{{post.title}}</h1>
-  <h4>{{post.user}}</h4>
+  <div class="container">
+    <div class="project">
+      <h1>{{post.title}}</h1>
+      <h4>{{post.user}}</h4>
 
-  <p>{{post.body}}</p>
+      <p>{{post.body}}</p>
+      <a class="btn btn-secondary" href="{% url 'users:contact' pk=post.user.pk %}">Volunteer!</a>
+      {% if user.is_authenticated%}
+        <a href="{% url 'posts:post_edit' pk=post.pk%}">Edit</a>
+      {% endif%}
 
-  <a href="{% url 'posts:post_edit' pk=post.pk%}">Edit</a>
-
+    </div>
+    <a id="about_href" href="{% url 'users:church_detail' pk=post.user.pk%}"><div class="about">
+      <h2>{{post.user}}</h2>
+      <h6>{{post.user.address}}</h6>
+      {{post.user.description}}
+    </div>
+</a>
+  </div>
 
 {% endblock %}
