Convert all pages to responsive

--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-  <div class="search-items">
-    <div class="container cont-search-items">
+  <div class=" container search-items">
+    <div class="cont-search-items">
     <form method="get">
         <input class="btn btn-secondary mybtn" type="submit" value='Search'>
         <my id="search-box" >{{filter.form.search}}</my>
