--- a/posts/static/css/master.css
+++ b/posts/static/css/master.css
@@ -38,17 +38,23 @@ html, body{
   width: 40%;
   height: 91%;
   padding: 40px;
-
 }
 
-.welcome{
-  height: 50%;
+.xcontainer{
+  position: absolute;
+  margin-left: 8%;
+  margin-right: 8%;
+  margin-top: 10%;
+}
+
+#welcome{
   text-align:center;
   background-color: white;
+  margin-top: 50%;
   border-radius: 5px;
-  padding: 15px;
+  padding: 30px;
   padding-top: 30px;
-  box-shadow: 1px 1px 10px gray;
+  box-shadow: 1px 1px 10px;
   margin-top: 40px;
 }
 
@@ -59,16 +65,11 @@ html, body{
 /*############################### Post_List_Page ###################################*/
 
 .search-items{
-  width: 80%;
-  margin-left: 10%;
-  margin-top: 5%;
-  height: 3%;
-
 }
 
 .post-list-page{
+  position: relative;
   width: 80%;
-  margin-top: 3%;
   margin-left: 10%;
   background-color: rgba(255, 255, 255, .7);
   box-shadow: 1px 1px 10px;
@@ -76,11 +77,16 @@ html, body{
 }
 
 #search-cat-title{
+  position: relative;
   margin-top: 20px;
   margin-left: 30px;
 }
 
 .cont-search-items{
+  position: relative;
+  height: 10%;
+  padding-top: 3%;
+  padding-bottom: 3%;
   text-align: center;
 }
 .mybtn{}
@@ -103,10 +109,9 @@ html, body{
 
 /*#################### Post Detail Page ######################*/
 
-.project{
-  display: inline-block;
-  width: 60%;
+#project{
   background-color: white;
+  margin: 20px;
   margin-top: 5%;
   padding: 25px;
   border-radius: 5px;
@@ -114,29 +119,27 @@ html, body{
 }
 
 #about_href:link{color: black;}
-#about_href:hover{color: gray;}
+#about_href:hover{
+  text-decoration: none;
+  box-shadow: 1px 1px 20px;
+}
 #about_href:visited{color: black;}
 
 
-
-.about{
-  display: inline-block;
-  position:absolute;
-  width: 30%;
-  margin-left: 3%;
-  margin-top: 4.5%;
+#about_href{
+  margin: 20px;
+  margin-top: 5%;
   background-color: white;
   padding: 25px;
   border-radius: 5px;
   box-shadow: 1px 1px 10px;
 }
 
+
 /*##################### Login Page ############################*/
 
 .login_page{
-  height: 35%;
-  width: 35%;
-  margin-left: 32%;
+  margin: auto;
   margin-top: 12%;
   padding: 20px;
   background-color: white;
@@ -147,10 +150,13 @@ html, body{
 /*################ Sign Up Page ################# */
 
 .signup_page{
-  width: 40%;
-  margin-left: 30%;
+  margin: auto;
   margin-top: 15px;
   margin-bottom: 20px;
+  padding: 20px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px;
 }
 
 /* ################# Church Detail ################ */
@@ -168,24 +174,28 @@ html, body{
 
 /*################# Contact Form ################### */
 
-.contact_form{
-  display: inline-block;
+#contact_form{
   background-color: white;
+  margin: 20px;
   margin-top: 5%;
-  width: 60%;
-  padding: 40px;
+  padding: 25px;
   border-radius: 5px;
   box-shadow: 1px 1px 10px;
 }
 
-.contact_info{
-  display: inline-block;
-  position: absolute;
+#contact_info{
   background-color: white;
-  margin-top: 4.25%;
-  margin-left: 6%;
-  width: 30%;
-  padding: 40px;
+  height: 25%;
+  margin: 20px;
+  margin-top: 5%;
+  padding: 25px;
   border-radius: 5px;
   box-shadow: 1px 1px 10px;
 }
+
+#contact_info:link{color: black;}
+#contact_info:hover{
+  text-decoration: none;
+  box-shadow: 1px 1px 20px;
+}
+#contact_info:visited{color: black;}
