--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -6,14 +6,14 @@
 
   <div class="container">
 
-    <div class="login_page">
+    <div class="col-lg-4 login_page">
      <h1>Log In</h1>
      <form method="post">
        {% csrf_token %}
        {% bootstrap_form form %}
        <button type="submit" class="btn btn-secondary">Log In</button>
      </form>
-     Don't have an account? <a href="{% url 'users:signup' %}">Sign Up</a> 
+     Don't have an account? <a href="{% url 'users:signup' %}">Sign Up</a>
      </div>
     </div>
 {% endblock %}
