--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -15,7 +15,7 @@
 	<body>
 
 		<nav class=" navbar navbar-expand-lg navbar-light">
-			<div class="container">
+
 				<div class="navbar-nav align-items-center">
 
 					<a class="custnav-brand" href="{% url 'home'%}"> <b>ChurchWorks</b>
@@ -29,12 +29,12 @@
 						<a class="custnav-item" href="{% url 'users:login'%}">Log In</a>
 					{% endif %}
 				</div>
-		</div>
+
 
 		</nav>
 
-
-		<div class="signup_page">
+	<div class="container">
+		<div class="col-md-4 signup_page">
 
 			 <h1>Sign Up</h1>
 			 <form method="post">
@@ -44,6 +44,7 @@
 			 </form>
 			 Already have an account? <a href="{% url 'users:login' %}">Log In</a>
 		</div>
+	</div>
 
 	</body>
 </html>
