--- a/posts/templates/posts/post_form.html
+++ b/posts/templates/posts/post_form.html
@@ -1,11 +1,16 @@
 {% extends 'base.html' %}
 
+{% load bootstrap4 %}
 {% block content %}
 
-  <form method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit" class="btn btn-default">Publish</button>
-  </form>
+
+    <div class="container">
+      <form method="post" class="col-md-8" id='form' >
+        {% csrf_token %}
+        {%bootstrap_form form%}
+        <button type="submit" class="btn btn-secondary">Publish</button>
+      </form>
+    </div>
+
 
 {% endblock %}
